<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f7"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="27sp"
            android:textColor="#5c0202"
            android:layout_marginTop="51dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcome_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title_name"
            android:textSize="45sp"
            android:textColor="#5c0202"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title"
            app:layout_constraintEnd_toEndOf="@+id/welcome_title"
            app:layout_constraintStart_toStartOf="@+id/welcome_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_ipt"
            style="@style/Widget.TalkSpace.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:layout_marginTop="54dp"
            app:prefixText="+91 "
            app:layout_constraintStart_toStartOf="@+id/welcome_title_name"
            app:layout_constraintEnd_toEndOf="@+id/welcome_title_name"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title_name">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_ipt_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/number_ipt"
            app:layout_constraintStart_toStartOf="@+id/number_ipt"
            app:layout_constraintEnd_toEndOf="@+id/number_ipt">

            <Button
                android:id="@+id/sign_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/send_otp_btn"/>

            <ProgressBar
                android:id="@+id/progress_bar_send_otp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>