<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f7"
    tools:context=".SendOtpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/otp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5c0202"
            android:text="@string/otp_title"
            android:textSize="42sp"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/verification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5c0202"
            android:layout_marginTop="8dp"
            android:padding="2dp"
            android:text="@string/verification_title"
            android:textSize="27sp"
            app:layout_constraintTop_toBottomOf="@+id/otp_title"
            app:layout_constraintStart_toStartOf="@+id/otp_title"
            app:layout_constraintEnd_toEndOf="@+id/otp_title"/>

        <LinearLayout
            android:id="@+id/otp_auto_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/verification_title"
            app:layout_constraintStart_toStartOf="@+id/verification_title"
            app:layout_constraintEnd_toEndOf="@+id/verification_title">
            
            <EditText
                android:id="@+id/otp_code_1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp_code_2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp_code_3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp_code_4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp_code_5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/otp_code_6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:imeOptions="actionNext"
                android:gravity="center"
                android:maxLength="1"
                android:importantForAutofill="no"
                android:inputType="number"/>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/resend_wappers_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/otp_auto_input"
            app:layout_constraintStart_toStartOf="@+id/otp_auto_input"
            app:layout_constraintEnd_toEndOf="@+id/otp_auto_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/did_not_receive_the_otp_text"/>

            <TextView
                android:id="@+id/resend_otp_text_btn"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#038EFD"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/resend_otp_text_btn"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/resend_wappers_layout"
            app:layout_constraintStart_toStartOf="@+id/resend_wappers_layout"
            app:layout_constraintTop_toBottomOf="@+id/resend_wappers_layout">

            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_btn"
                android:layout_alignParentEnd="true"/>

            <ProgressBar
                android:id="@+id/progress_bar_verify_otp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>