<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1e1e1"
    tools:context=".GetUserDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/image_frame"
            android:layout_width="195dp"
            android:layout_height="195dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_uploaded_image"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:scaleType="centerCrop"
                android:elevation="9dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/image1"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.TalkSpace.CornerShape"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.imageview.ShapeableImageView
                android:background="#14354A"
                android:backgroundTint="#14354A"
                android:id="@+id/image_storage_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:elevation="9dp"
                android:layout_alignParentStart="true"
                app:shapeAppearance="@style/ShapeAppearance.TalkSpace.CornerShapeForeIconImage"
                android:src="@drawable/ic_add"
                />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_used_camera"
                android:background="#14354A"
                android:backgroundTint="#14354A"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:elevation="9dp"
                app:shapeAppearance="@style/ShapeAppearance.TalkSpace.CornerShapeForeIconImage"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_camera"/>
        </RelativeLayout>




        <TextView
            android:id="@+id/name_enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_title"
            android:layout_marginTop="34dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/image_frame"
            app:layout_constraintEnd_toEndOf="@+id/image_frame"
            app:layout_constraintStart_toStartOf="@+id/image_frame"/>

        <EditText
            android:id="@+id/user_name_ipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/name_enter_title"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/name_enter_title"
            app:layout_constraintTop_toBottomOf="@+id/name_enter_title" />

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/about_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/user_name_ipt"
            app:layout_constraintStart_toStartOf="@+id/user_name_ipt"
            app:layout_constraintTop_toBottomOf="@+id/user_name_ipt"/>

        <EditText
            android:id="@+id/user_about_ipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/about_title"
            app:layout_constraintStart_toStartOf="@+id/about_title"
            app:layout_constraintTop_toBottomOf="@+id/about_title"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/user_about_ipt"
            app:layout_constraintEnd_toEndOf="@+id/user_about_ipt"
            app:layout_constraintStart_toStartOf="@+id/user_about_ipt">

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_btn_text"/>

            <ProgressBar
                android:id="@+id/progress_bar_continue_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>